# pre-commit-indents-to-tabs

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  tox.ini
src/indents_to_tabs/: __init__.py  chunk.py  convert.py  pass_fail_constants.py
tests/: convert_test.py  file_utils.py
tests/testdata/: indent_error.tf  indent_error_tabs.tf  spaces_2.tf  spaces_4.tf  tabs.tf
