[bdist_wheel]
universal = True

[metadata]
name = pre-commit-indents-to-tabs
version = attr: indents_to_tabs.__version__

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7
setup_requires =
    setuptools >= 46.4.0  # required to use attr to extract version
tests_require =
    coverage >= 6.3
    mypy >= 0.931
    pytest >= 7.0.1
    pytest-cov >= 3.0.0
zip_safe = False

[options.entry_points]
console_scripts =
    indents-to-tabs = indents_to_tabs:main

[options.packages.find]
where=src

[options.package_data]
indents_to_tabs = py.typed
