[bdist_wheel]
universal = True

[metadata]
name = pre-commit-indents-to-tabs
version = attr: indents_to_tabs.__version__
description = Pre-commit hook to replace spaces with tabs in indents.
author = Andrew Pinkham
license = BSD 2-Clause License
license_file = LICENSE
url = https://github.com/jambonrose/pre-commit-indents-to-tabs
project_urls =
    Bug Tracker = https://github.com/jambonrose/pre-commit-indents-to-tabs/discussions
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7
setup_requires =
    setuptools >= 46.4.0  # required to use attr to extract version
tests_require =
    coverage >= 6.3
    mypy >= 0.931
    pytest >= 7.0.1
    pytest-cov >= 3.0.0
test_suite = tests
zip_safe = False

[options.entry_points]
console_scripts =
    indents-to-tabs = indents_to_tabs:main

[options.packages.find]
where=src

[options.package_data]
indents_to_tabs = py.typed
